--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,10 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/scripts.js"
+              // "src/datas.json"
+            ]
           },
           "configurations": {
             "production": {
